<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/module_hint_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/iconItemIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/module_ic_github"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:src="@drawable/ic_github" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/iconItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/module_github_src"
            android:textAlignment="textStart"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/iconItemSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:text="@string/module_github_url"
            android:textAlignment="textStart"
            android:textColor="@color/subtext"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>